--- a/styles.css
+++ b/styles.css
@@ -326,7 +326,7 @@ footer {
     body { 
         background-image: url("img/backgorund-movil.png");
         background-repeat: no-repeat;
-        height: 520px;
+        min-height: 100%;
         margin-top: 60px;
     }
     #input-text{ height: 284px;}
